update: 优化全面启动虚拟线程